--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       padding: 40px;
       min-height: 100vh;
       margin: 0;
-      display: flex;
+      display: none;
       flex-direction: column;
       justify-content: center;
       align-items: center;
@@ -54,12 +54,6 @@
     <source src="Rumahku.mp3" type="audio/mpeg">
     Browser Anda tidak mendukung pemutar audio.
   </audio>
-  <div class="lyrics">
-    <!-- Isi lirik bisa ditulis di sini -->
-    Selamat datang di rumahku
-    Tempat semua cerita bermula
-    Hangatnya pelukan kasih
-    Membawa damai di hatiku
   </div>
 </body>
 </html>
