--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     body {
       font-family: 'Segoe UI', sans-serif;
       background: linear-gradient(to bottom right, #fffbe0, #ffe4e1);
-      color: transparent;
+      color: #2c2c2c;
       text-align: center;
       padding: 40px;
     }
@@ -21,7 +21,7 @@
     }
     .lyrics {
       white-space: pre-wrap;
-      background-color: transparent;
+      background-color: #fefefe;
       border-radius: 10px;
       padding: 20px;
       max-width: 800px;
